test/Fail/Issue256.err
Issue256.agda:14.1-15.24: error: [TerminationIssue]
Termination checking failed for the following functions:
  ℓ
Problematic calls:
  ℓ (at Issue256.agda:15.22-23)
